# WorkflowForge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml
apps/api/: README.md  pyproject.toml
apps/api/src/workflowforge_api/: __init__.py  audit.py  bootstrap.py  dependencies.py  exception_handlers.py  factory.py  lifespan.py  main.py  security.py
apps/api/src/workflowforge_api/middleware/: __init__.py  request_context.py  security_headers.py
apps/api/src/workflowforge_api/routes/: __init__.py  auth.py  batches.py  cases.py  documents.py  health.py  tenancy.py
apps/api/src/workflowforge_api/schemas/: __init__.py  auth.py  batches.py  cases.py  documents.py  errors.py  health.py  tenancy.py
apps/scheduler/: README.md  pyproject.toml
apps/scheduler/src/workflowforge_scheduler/: __init__.py  factory.py  main.py
apps/web/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  error-boundary.test.tsx  error-boundary.tsx  providers.tsx  router.test.tsx  router.tsx
apps/web/src/lib/: api-client.test.ts  api-client.ts  env.test.ts  env.ts  query-client.ts
apps/web/src/styles/: globals.css  tokens.css
apps/web/src/test/: render.tsx  setup.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/workflowforge_worker/: __init__.py  factory.py  main.py
demo_data/: README.md
docs/: architecture.md  audit.md  authorization.md  commits.md  glossary.md  identity.md  phase-1-readiness.md  phase-2-demo-runbook.md  phase-2-release-notes.md  phase-2-security-proof.md  phase-3-demo-runbook.md  phase-3-release-notes.md  product.md  security.md  tenancy.md  v1-scope.md
docs/adr/: 0001-modular-monolith.md  0002-authentication-and-session-model.md  0003-tenant-isolation-strategy.md  0004-role-and-permission-model.md  0005-audit-event-storage.md  README.md
examples/: README.md
infrastructure/: README.md
infrastructure/docker/: api.Dockerfile
infrastructure/minio/: init.sh
integrations/: README.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 0001_baseline.py  0002_create_documents.py  0003_identity_core.py  0004_memberships.py  0005_password_credentials.py  0006_sessions.py  0007_security_audit_events.py  0008_document_tenancy_versions_storage.py  0009_upload_idempotency.py  0010_batches.py  0011_cases.py
scripts/: README.md  __init__.py  run_diagnostic_task.py  validate_architecture.py
tests/: README.md  conftest.py
tests/architecture/: README.md  test_dependency_cycles.py  test_import_boundaries.py
tests/integration/: README.md
tests/integration/api/: test_auth_flow.py  test_document_upload_flow.py  test_tenancy_flow.py
tests/integration/database/: test_audit_repository.py  test_audit_transactions.py  test_database_health.py  test_document_repository.py  test_identity_repositories.py  test_migrations.py  test_security_repositories.py  test_session_lifecycle_transactions.py  utils.py
tests/integration/health/: test_dependency_health.py
tests/integration/redis/: test_auth_rate_limiter_integration.py
tests/integration/tasks/: test_scheduler_heartbeat.py  test_worker_execution.py
tests/system/: README.md
tests/unit/: test_ci_configuration.py  test_compose_configuration.py  test_logging_configuration.py  test_package_imports.py  test_settings.py
tests/unit/api/: test_audit_adapter.py  test_audit_helpers.py  test_auth.py  test_bootstrap_cli.py  test_cors.py  test_dependency_health_endpoint.py  test_document_upload.py  test_errors.py  test_factory.py  test_health.py  test_openapi.py  test_phase3_routes.py  test_request_context.py  test_tenancy.py
tests/unit/application/: test_authentication.py  test_authorization.py  test_batch_service.py  test_case_service.py  test_document_service.py  test_document_upload_validation.py  test_security_bootstrap.py  test_security_cleanup.py  test_session_lifecycle.py  test_user_organizations.py
tests/unit/contracts/: test_diagnostic_task_contracts.py
tests/unit/domain/: test_audit.py  test_batches.py  test_cases.py  test_documents.py
tests/unit/infrastructure/: test_audit_repository_surface.py  test_password_hasher.py  test_token_security.py
(+55 files in other folders)
